# jackal_desktop

jackal_desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
jackal_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
jackal_viz/launch/: view_diagnostics.launch  view_diagnostics.launch.py  view_model.launch  view_model.launch.py  view_robot.launch  view_robot.launch.py
jackal_viz/rqt/: diagnostics_melodic.perspective
jackal_viz/rviz/: gmapping.rviz  localization.rviz  model.rviz  nav2.rviz  navigation.rviz  robot.rviz  slam.rviz
