<?xml version="1.0"?>
<package format="2">
  <name>jackal_desktop</name>
  <version>0.4.1</version>
  <description>Packages for working with Jackal from a ROS desktop.</description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/jackal_desktop</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>jackal_msgs</exec_depend>
  <exec_depend>jackal_viz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
