<?xml version="1.0"?>
<package format="2">
  <name>jackal_viz</name>
  <version>0.4.1</version>
  <description>Visualization launchers and helpers for Jackal.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>jackal_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rqt_console</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_robot_monitor</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
