<?xml version="1.0"?>
<package format="2">
  <name>jackal_viz</name>
  <version>1.0.1</version>
  <description>Visualization launchers and helpers for Jackal.</description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>jackal_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rqt_console</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_robot_monitor</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
